--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,15 @@
   --dark-navbar-color: rgba(47, 47, 47, 1);
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container{
+  width: 100vw;
+  min-height: 100vh;
+  border: 2px solid blue;
+}
 
