structure of container and navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
-.app{
-  border: 2px solid red;
+.container{
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  width: 100vw;
+  min-height: 100vh;
+  border: 2px solid blue;
+  padding: 20px;
 }
