--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,12 @@
   box-sizing: border-box;
 }
 
+a{
+  text-decoration: none;
+  color: black;
+}
 
+li{
+  list-style: none;
+  list-style-type: none;
+}
