--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,44 @@
 .navbar{
-    border: 2px solid red;
     width: 83vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: var(--light-background-color);
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.logo img{
+    width: 10vw;
+}
+
+.nav-menu{
+    display: flex;
+    gap: 10px;
+}
+
+.nav-menu li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav-menu li img{
+    width: 12px;
+}
+
+.accounts{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.accounts button{
+    border: none;
+    outline: none;
+    color: var(--white-color);
+    background: var(--light-main-color);
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
 }
